<resources>
    <string name="app_name">TSG_Disaster_Response_App</string>
    <string name="no_network">No Network Available Please Turn on your Network connection</string>
    <string name="hintPassword">Password</string>
    <string name="hintUsername">User Name</string>
    <string name="login">Login </string>
    <color name="textcolor">#757575</color>
    <string name="otpLogin">OTP Login</string>
    <string name="qrLogin">QR Login</string>
    <string name="Register_this">DON\'T HAVE AN ACCOUNT</string>
    <string name="signup">Sign Up</string>
    <string name="myActivity">My Activity</string>
    <string name="approval">Approval</string>
    <string name="emergencyphase">Emergency Phase</string>
    <string name="reliefphase">Relief Phase</string>
    <string name="dashboard">Dashboard</string>
    <string name="update">Update Profile</string>
    <string name="profile_submit">Submit</string>
</resources>
